@@ -575,11 +575,11 @@ class SimpleSourceWidget(gtk.DrawingArea):
         deleteitem.connect("activate", self._deleteMenuItemCb)
         deleteitem.show()
         # temporarily deactivate editing for 0.10.3 release !
-#         edititem = gtk.MenuItem(_("Edit"))
-#         edititem.connect("activate", self._editMenuItemCb)
-#         edititem.show()
+        edititem = gtk.MenuItem(_("Edit"))
+        edititem.connect("activate", self._editMenuItemCb)
+        edititem.show()
         self._popupMenu.append(deleteitem)
-#        self._popupMenu.append(edititem)
+        self._popupMenu.append(edititem)
 
         # drag and drop
         self.drag_source_set(gtk.gdk.BUTTON1_MASK,
